--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,80 +1,112 @@
 .usa-disclaimer {
   text-align: center;
 }
+
 .usa-site-navbar {
   padding-top: 1rem;
 }
+
 .usa-site-navbar .usa-grid {
   position: relative;
 }
+
 .usa-site-navbar .usa-grid::before,
 .usa-site-navbar .usa-grid::after {
+  content: '';
   display: table;
-  content: "";
 }
+
 #logo {
   float: left;
-  max-width: 32rem;
   height: 80px;
+  max-width: 32rem;
 }
+
 #logo img {
   width: 60%;
 }
+
 #logo a {
-  border: none;
+  border: 0;
 }
+
 #logo h1 {
   font-size: 3rem;
   margin: 0;
 }
+
 .usa-nav-list a {
   border-bottom: 0;
   text-decoration: none;
 }
+
 .usa-nav-list {
   float: right;
   margin-top: -1em;
   position: absolute;
   right: 3rem;
   top: 50%;
+
+  @media (max-width: 900px) {
+    float: none;
+    margin: 0 auto;
+    margin-bottom: 1em;
+    position: relative;
+    text-align: center;
+    width: 70%;
+  }
 }
+
 li.usa-menu-item {
-  font-size: 18px;
   display: inline;
+  font-size: 18px;
+
+  @media (max-width: 970px) {
+    font-size: 14px;
+  }
 }
+
 .usa-menu-item a {
   padding: 1em;
 }
+
 .usa-menu-item:hover a {
   background-color: $button-color;
   color: $button-text-color;
 }
+
 @media (max-width: 600px) {
   .usa-site-navbar .usa-grid {
     padding: 0;
   }
+
   #logo {
     height: auto;
     margin-top: 1em;
     max-width: none;
   }
+
   .usa-nav-list {
     margin: 1em 0;
   }
-  #logo,.usa-nav-list {
+
+  #logo, .usa-nav-list {
     float: none;
     text-align: center;
   }
+
   ul.usa-nav-list {
     bottom: 0;
     position: relative;
     right: 0;
     width: 100%;
   }
+
   .usa-menu-item a {
-    padding: 0.4em;
+    padding: .4em;
   }
 }
+
 li.usa-menu-item:last-child {
   margin-right: 0;
 }
