--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,29 +1,56 @@
 body,
-p, ul, ol, li, a  {
+p,
+ul,
+ol,
+li,
+a {
   color: $text-color;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
 }
-legend, label,
-h1, h2, h3, h4, h5, h6 {
+
+legend,
+label,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: $headers-color;
   font-family: 'Lato', sans-serif;
 }
 
 legend,
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 20px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: $header-text-color;
+  margin-bottom: 20px;
 }
-ul, li {
+
+ul,
+li {
   margin-bottom: 0;
 }
+
+ul p,
+ol p {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
 main {
   margin-bottom: 1em;
 }
+
 form {
   max-width: 100%;
 }
+
 .usa-content > p,
 .usa-content > ul,
 .usa-content > ol,
@@ -35,6 +62,7 @@ form {
 .usa-content > h6 {
   max-width: 62.5rem;
 }
+
 a:visited {
   color: inherit;
 }
@@ -47,6 +75,7 @@ div.skip-nav a {
   height: auto;
   overflow: hidden;
 }
+
 div.skip-nav a:focus {
   position: absolute;
   top: 5px;
@@ -59,6 +88,7 @@ div.skip-nav a:focus {
   padding-right: 2px;
   overflow: visible;
 }
+
 #main:focus {
   outline: none;
 }
