Updating _navigation.json to use new schema
We had updated _navigation.json in the original template repo
but didn't submit a pull request to update it here. As a result,
the editor interface was breaking in Federalist as
_navigation.json didn't have the proper shape.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,11 +22,11 @@
         </a>
       </div>
       <ul class="usa-nav-list usa-unstyled-list">
-        {% assign navs = site.data.navbar %}
+        {% assign navs = site.data.navbar.assigned %}
 
         {% for nav in navs %}
           <li class="usa-menu-item">
-            <a href="{{ nav.permalink | prepend: site.baseurl }}">{{ nav.name }}</a>
+            <a href="{{ nav.permalink | prepend: site.baseurl }}">{{ nav.text }}</a>
           </li>
         {% endfor %}
       </ul>
