--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
 
   <form id="contact" action="{{ f.url }}" method="POST">
     <fieldset>
-      <legend>Sign up to receive updates from SBST</legend>
+      <legend>Sign up to receive updates from OES</legend>
       <div class="usa-width-one-half">
         {% for field in f.fields %}
           {% unless field.type == 'hidden' %}<label for="contact-{{ field.name }}">{{ field.label }}</label>{% endunless %}
