--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: base
   <div class="usa-width-one-whole usa-content">
     <h1> {{ page.title }}</h1>
     {% if page.image %}
-      <div class="page--banner" style="background-image: url({{ page.image | prepend: site.baseurl }});"></div>
+      <img src="{{ page.image | prepend: site.baseurl }}">
     {% endif %}
     {{ content }}
   </div>
