--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,11 +1,7 @@
+<div class="project-container">
 {% for project in site.projects %}
   {% unless project.featured %}
-    {% assign third = forloop.index | modulo: 3 %}
-    {% if third == 1 %}
-    <div class="usa-width-one-third usa-end-row project">
-    {% else %}
     <div class="usa-width-one-third project">
-    {% endif %}
       <a href="{{ project.url | prepend: site.baseurl }}">
         <img src="{{ project.image | prepend: site.baseurl }}">
         <h3 class="project--description"><span>{{ project.title }}&nbsp;&gt;</span></h3>
@@ -13,3 +9,4 @@
     </div>
   {% endunless %}
 {% endfor %}
+</div>
