--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,12 @@
 ---
 layout: base
+class: page-single-column
 ---
 
-<main class="usa-grid" id="main">
-  <div class="usa-width-one-whole usa-content">
-    <h1> {{ page.title }}</h1>
-    {% if page.image %}
-      <img src="{{ page.image | prepend: site.baseurl }}">
-    {% endif %}
-    {{ content }}
-  </div>
-</main>
+<div class="usa-grid usa-content" id="main">
+  <h1>{{ page.title }}</h1>
+  {% if page.image %}
+    <img src="{{ page.image | prepend: site.baseurl }}">
+  {% endif %}
+  {{ content }}
+</div>
