--- a/_layouts/sidenav-page.html
+++ b/_layouts/sidenav-page.html
@@ -26,7 +26,7 @@ layout: base
       <div class="page--banner" style="background-image: url({{ page.image | prepend: site.baseurl }});"></div>
     {% endif %}
     {% if page.image-credit %}
-      <span class="caption"><a href="{{page.image-credit}}" target="_blank">Photo credit</a> (Creative Commons)</span>
+      <p class="caption"><a href="{{page.image-credit}}" target="_blank">Photo credit</a> (Creative Commons)</p>
     {% endif %}
     {{ content }}
   </div>
