Readd background image style to cards

--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -145,3 +145,11 @@ body:not(.page-home) {
   min-height: 300px;
   width: 100%;
 }
+
+.project--image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 200px;
+  width: 100%;
+}
