--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
   {% unless project.featured %}
     <div class="usa-width-one-third project">
       <a href="{{ project.url | prepend: site.baseurl }}">
-        <img src="{{ project.image | prepend: site.baseurl }}">
+        <div class="project--image" style="background-image: url({{ project.image | prepend: site.baseurl }});"></div>
         <h3 class="project--description"><span>{{ project.title }}&nbsp;&gt;</span></h3>
       </a>
     </div>
