--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -12,20 +12,6 @@ body:not(.page-home) {
   }
 }
 
-// Allows 3 column project grid to display in a row
-.project {
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
-}
-
-// Sets a height on projects so they're the same height and don't break the grid
-.project {
-  @include media($medium-screen) {
-    min-height: 330px;
-  }
-}
-
 .usa-display-alt {
   color: $color-primary-darker;
   font-family: $font-sans;
@@ -146,6 +132,38 @@ body:not(.page-home) {
   width: 100%;
 }
 
+// Sets a height on projects so they're the same height and don't break the grid
+.project--card {
+  box-shadow: 0 0 0 1px $color-gray-lighter;
+  display: block;
+  margin-bottom: 3rem;
+  text-decoration: none;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  &:hover {
+    box-shadow: 0 0 0 1px $color-primary;
+  }
+
+  &:active {
+    box-shadow: $focus-shadow;
+  }
+
+  @include media($medium-screen) {
+    min-height: 450px;
+  }
+}
+
+.project--banner {
+  @include margin(null 3rem);
+
+  @include media($medium-screen) {
+    height: 200px;
+  }
+}
+
 .project--image {
   background-size: cover;
   background-repeat: no-repeat;
@@ -153,3 +171,19 @@ body:not(.page-home) {
   min-height: 200px;
   width: 100%;
 }
+
+.project--description.project--description {
+  color: $color-primary;
+}
+
+.project--summary {
+  color: $color-base;
+}
+
+.project--read {
+  @include margin(null 3rem);
+  color: $color-primary;
+  font-weight: bold;
+  padding-bottom: 3rem;
+}
+
