Change hero callout text to white

--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -22,6 +22,10 @@ body:not(.page-home) {
 
 .usa-hero-callout {
   max-width: 31rem;
+
+  h2 {
+    color: $color-white;
+  }
 }
 
 .center-content {
