--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,6 +34,6 @@ layout: base
   </div>
 </section>
 
-<section class="usa-section usa-section-alt background-medium">
+<section class="usa-section background-dark">
 {% include contact.html %}
 </section>
