Change font family to use Lato

--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -1,5 +1,31 @@
 // Typography ------------- //
 
+// Variables
+$font-sans: "Lato", $helvetica;
+$font-body: $font-sans;
+$font-headings: $font-sans;
+
+html {
+  font-family: $font-body;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-headings;
+}
+
+// Override the sidenav list mixin font which used Source Sans Pro
+// TODO: see if it can be fixed in the Standards, maybe remove from mixin
+.usa-nav-primary {
+  a {
+    font-family: $font-body;
+  }
+}
+
 .usa-display-alt {
   color: $color-primary-darker;
   font-family: $font-sans;
