--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -247,4 +247,12 @@ body:not(.page-home) {
   font-size: $small-font-size;
   font-weight: bold;
   padding-bottom: 3rem;
+
+   svg {
+    display: inline-block;
+    height: 1.2rem;
+    margin-bottom: -1px;
+    width: 1.2rem;
+    margin-left: 4px;
+  }
 }
