--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,7 +16,7 @@
             {% if field.value %} value="{{ field.value }}" {% endif %}>
         {% endfor %}
         <div class="usa-input-buttons-inline">
-          <input class="usa-button-primary-alt" type="submit" value="{{ f.button }}">
+          <input class="usa-button" type="submit" value="{{ f.button }}">
         </div>
       </div>
       <div class="usa-width-one-half" style="margin-top: 3rem;">
