--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -1,19 +1,39 @@
 // Typography ------------- //
 
-.usa-display-alt {
-  color: $color-primary-darker;
+p {
+  font-family: $font-body;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-headings;
+}
+
+.billboard {
+  .usa-grid {
+    max-width: 656px;
+  }
+}
+
+.billboard-callout {
+  color: #81848B;
   font-family: $font-sans;
-  font-size: 40px;
+  font-size: 38px;
+  font-weight: bold;
   line-height: 1.3;
-  text-align: center;
+
+  em {
+    color: $color-base;
+    font-style: normal;
+  }
 }
 
 
 // Utillities ------------- //
-
-.center-content {
-  text-align: center;
-}
 
 
 // Layout ------------- //
@@ -75,6 +95,13 @@ body:not(.page-home) {
   }
 }
 
+.background-light {
+  background-color: $color-brand-light;
+
+  .usa-button {
+    background-color: $color-brand-dark;
+  }
+}
 
 // Navigation ------------- //
 
@@ -127,40 +154,24 @@ body:not(.page-home) {
 // Hero feature ------------- //
 
 .usa-hero {
-  padding: 0;
-
   .usa-grid {
     padding-right: 0;
   }
 }
 
 .usa-hero-callout {
-  @include padding(5rem 1.5rem 5rem 0);
-  max-width: initial;
-  position: relative;
-
   h2 {
     color: $color-white;
   }
 
-  .usa-button {
+  .usa-button.usa-button-secondary {
+    background-color: $color-white;
+    color: $color-primary-darkest;
     font-size: inherit;
   }
 
   @include media($medium-screen) {
     max-width: 350px;
-    padding-right: 5rem;
-  }
-
-  &::before {
-    background-color: $color-primary-darkest;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    width: 1000%;
-    right: 100%;
   }
 }
 
