--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,7 @@
 $nav-width: 860px;
 
+$base-font-size: 1.8rem;
+
 $helvetica: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 $font-sans: "Lato", $helvetica; // note: should this be $font-body?
 
