--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,7 @@
 $nav-width: 892px;
 
 $base-font-size: 1.8rem;
+$h4-font-size: 1.6rem;
 
 $helvetica: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 $font-sans: "Lato", $helvetica; // note: should this be $font-body?
