--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,12 +23,15 @@ layout: base
 
 <section class="usa-section billboard">
   <div class="usa-grid">
+    <div class="usa-width-one-sixth">
+      {% include icons/gears.svg %}
+    </div>
+    <div class="usa-width-two-thirds">
     {{ content }}
-
     {% if page.content-button-link %}
       <a href="{{ page.content-button-link | prepend: site.baseurl }}" class="usa-button">{{ page.content-button-text }}</a>
     {% endif %}
-
+    </div>
   </div>
 </section>
 
