--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -18,6 +18,12 @@ h6,
   font-family: $font-headings;
 }
 
+.usa-content {
+  h1 {
+    color: $color-base;
+  }
+}
+
 .font-small {
   font-size: $small-font-size;
 }
