--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -8,15 +8,15 @@ layout: page
     <div class="usa-width-one-half usa-media_block">
       <img class="usa-media_block-img" src="/assets/img/circle-124.png" alt="Alt text">
       <div class="usa-media_block-body">
-        <h3>Graphic headings can vary.</h3>
-        <p>Graphic headings can be used a few different ways, depending on what your landing page is for. Highlight your values, specific program areas, or results.</p>
+        <h3>Joe Smith</h3>
+        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
       </div>
     </div>
     <div class="usa-width-one-half usa-media_block">
       <img class="usa-media_block-img" src="/assets/img/circle-124.png" alt="Alt text">
       <div class="usa-media_block-body">
-        <h3>Stick to 6 or fewer words.</h3>
-        <p>Keep body text to about 30. They can be shorter, but try to be somewhat balanced across all four. It creates a clean appearance with good spacing.</p>
+        <h3>Kobe Bryant</h3>
+        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
       </div>
     </div>
   </div>
@@ -24,15 +24,15 @@ layout: page
     <div class="usa-width-one-half usa-media_block">
       <img class="usa-media_block-img" src="/assets/img/circle-124.png" alt="Alt text">
       <div class="usa-media_block-body">
-        <h3>Never highlight anything without a goal.</h3>
-        <p>For anything you want to highlight here, understand what your users know now, and what activity or impression you want from them after they see it.</p>
+        <h3>Ansel Adams</h3>
+        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
       </div>
     </div>
     <div class="usa-width-one-half usa-media_block">
       <img class="usa-media_block-img" src="/assets/img/circle-124.png" alt="Alt text">
       <div class="usa-media_block-body">
-        <h3>Could also have 2 or 6.</h3>
-        <p>In addition to your goal, find out your users’ goals. What do they want to know or do that supports your mission? Use these headings to show those.</p>
+        <h3>Cate Blanchett</h3>
+        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
       </div>
     </div>
   </div>
