--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -132,7 +132,7 @@ body:not(.page-home) {
 .usa-nav {
   a {
     &.usa-current {
-      @include media($medium-screen) {
+      @include media($nav-width) {
         border-left: 0;
       }
     }
@@ -140,7 +140,7 @@ body:not(.page-home) {
 
   .usa-current {
     > span {
-      @include media($medium-screen) {
+      @include media($nav-width) {
         @include nav-border;
       }
     }
