--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,39 +1,20 @@
 ---
 layout: page
+class: page-team
 ---
 
 {{ content }}
+
 <section class="usa-section usa-graphic_list">
-  <div class="usa-grid usa-graphic_list-row">
-    <div class="usa-width-one-half usa-media_block">
-      <img class="usa-media_block-img" src="{{ site.baseurl }}/assets/img/circle-124.png" alt="Alt text">
-      <div class="usa-media_block-body">
-        <h3>Joe Smith</h3>
-        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
-      </div>
-    </div>
-    <div class="usa-width-one-half usa-media_block">
-      <img class="usa-media_block-img" src="{{ site.baseurl }}/assets/img/circle-124.png" alt="Alt text">
-      <div class="usa-media_block-body">
-        <h3>Kobe Bryant</h3>
-        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
-      </div>
+{% for team in site.team %}
+  <div class="usa-width-one-half usa-media_block">
+    <img class="usa-media_block-img" src="{{ site.baseurl }}/assets/img/circle-124.png" alt="{{ team.name }}">
+    <div class="usa-media_block-body">
+      <a href="{{ site.baseurl }}{{ team.permalink }}">
+        <h3>{{ team.name }}</h3>
+      </a>
+      <p>{{ team.summary }}</p>
     </div>
   </div>
-  <div class="usa-grid usa-graphic_list-row">
-    <div class="usa-width-one-half usa-media_block">
-      <img class="usa-media_block-img" src="{{ site.baseurl }}/assets/img/circle-124.png" alt="Alt text">
-      <div class="usa-media_block-body">
-        <h3>Ansel Adams</h3>
-        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
-      </div>
-    </div>
-    <div class="usa-width-one-half usa-media_block">
-      <img class="usa-media_block-img" src="{{ site.baseurl }}/assets/img/circle-124.png" alt="Alt text">
-      <div class="usa-media_block-body">
-        <h3>Cate Blanchett</h3>
-        <p>Our partners breakthrough insights transformative experience in the field accessibility. Institutions; committed disrupt process cornerstone.</p>
-      </div>
-    </div>
-  </div>
-</section>
+{% endfor %}
+</div>
