--- a/_layouts/team-single.html
+++ b/_layouts/team-single.html
@@ -2,8 +2,10 @@
 layout: base
 ---
 
-<h1>{{ page.name }}</h1>
-{% if page.image %}
-  <div class="page--banner" style="background-image: url({{ page.image | prepend: site.baseurl }});"></div>
-{% endif %}
-{{ content }}
+<div class="usa-grid usa-content" id="main">
+  <h1>{{ page.title }}</h1>
+  {% if page.image %}
+    <img src="{{ page.image | prepend: site.baseurl }}">
+  {% endif %}
+  {{ content }}
+</div>
