--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -186,6 +186,10 @@ body:not(.page-home) {
     margin-right: 26px;
     margin-top: 25px;
   }
+
+  .usa-button {
+    margin-top: 0;
+  }
 }
 
 .billboard-message {
@@ -193,10 +197,10 @@ body:not(.page-home) {
   font-family: $font-sans;
   font-size: 38px;
   font-weight: $font-bold;
-  line-height: 1.3;
   max-width: 656px;
 
   p {
+    line-height: 1.3;
     margin-top: 0;
   }
 
