Add curly quotes

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -23,7 +23,7 @@
         {% if f.privacypolicy %}
           {% include icons/privacy.svg %}
           <h3 class="h4">Your privacy and security are important to us.</h3>
-          <p class="font-small">We'll only share your information as described in the <a href="http://www.gsa.gov/portal/content/116609">{{ f.privacypolicy.name }}</a>.</p>
+          <p class="font-small">We’ll only share your information as described in the <a href="http://www.gsa.gov/portal/content/116609">{{ f.privacypolicy.name }}</a>.</p>
         {% else %}
           <p></p>
         {% endif %}
